--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,10 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
         <p>
           {% for item in site.description %}
-            {{ item }}<br />
+            {{ item }}<br/>
           {% endfor %}
         </p>
 
