Fix typo in personal description in _config.yml

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,9 @@
 ---
 ---
 
-@import "jekyll-theme-minimal";
+@import "{{jekyll-theme-minimal}}";
+
+/* Custom CSS */
+body {
+    background-color: whitesmoke;
+}
