--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-// @import "jekyll-theme-minimal";
+@import "jekyll-theme-minimal";
 
-/* Custom CSS */
-body {
-    background-color: yellow;
-}
+// /* Custom CSS */
+// body {
+//     background-color: yellow;
+// }
