--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,9 @@
 ---
 ---
 
-@import "jekyll-theme-minimal";
+@import "{{ site.theme }}";
 
-// /* Custom CSS */
-// body {
-//     background-color: yellow;
-// }
+/* Custom CSS */
+body {
+    background-color: yellow;
+}
