Comment out custom CSS and update theme import in style.scss

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,9 +1,4 @@
----
----
+// ---
+// ---
 
-@import "{{ site.theme }}";
-
-/* Custom CSS */
-body {
-    background-color: yellow;
-}
+@import "jekyll-theme-minimal";
