Change body background color to rgba(240, 237, 237, 0.93) in jekyll-theme-minimal.scss

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,7 @@
 @import "rouge-github";
 
 body {
-  background-color: whitesmoke;
+  background-color: rgba(240, 237, 237, 0.93);
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
