Change body background color to rgb(205, 200, 200)smoke in jekyll-theme-minimal.scss

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,7 @@
 @import "rouge-github";
 
 body {
-  background-color: rgba(240, 237, 237, 0.93);
+  background-color: rgb(205, 200, 200)smoke;
   padding:20px;
   font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#353434;
