Change body text color to black in jekyll-theme-minimal.scss

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -5,7 +5,8 @@ body {
   background-color: rgb(205, 200, 200)smoke;
   padding:20px;
   font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#353434;
+  color:black;
+  // color:#353434;
   font-weight:400;
 }
 
