--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,7 @@
 @import "rouge-github";
 
 body {
-  background-color: rgb(205, 200, 200)smoke;
+  background-color: rgb(166, 166, 166);
   padding:20px;
   font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:black;
