Change body background color to #f7f3e9 in jekyll-theme-minimal.scss

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,7 @@
 @import "rouge-github";
 
 body {
-  background-color: rgb(166, 166, 166);
+  background-color: #f7f3e9;
   padding:10px;
   font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:black;
