Change body background color to #d2cab7 in jekyll-theme-minimal.scss

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,7 @@
 @import "rouge-github";
 
 body {
-  background-color: #c2b594;
+  background-color: #d2cab7;
   padding:10px;
   font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:black;
