Update heading color and table border color in jekyll-theme-minimal.scss

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -27,7 +27,7 @@ h1 {
 }
 
 h2 {
-  color:#393939;
+  color:#272727;
 }
 
 h3, h4, h5, h6 {
@@ -88,7 +88,7 @@ table {
 th, td {
   text-align:left;
   padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
+  border-bottom:1px solid darkgrey;
 }
 
 dt {
