--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -99,12 +99,13 @@ th, td {
 }
 
 dt {
-  color:#444;
+  color: #f4f1eb;
+  // color:#444;
   font-weight:700;
 }
 
 th {
-  color:#444;
+  color:#f4f1eb;
 }
 
 img {
@@ -288,6 +289,7 @@ footer {
   body {
     padding:0.4in;
     font-size:12pt;
-    color:#444;
+    color: #f4f1eb;
+    // color:#444;
   }
 }
