Update heading colors in jekyll-theme-minimal.scss for improved aesthetics

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -22,10 +22,12 @@ p, ul, ol, table, pre, dl {
 }
 
 h1, h2, h3 {
+  color:#f4f1eb;
   line-height:1.1;
 }
 
 h1 {
+  color:#f4f1eb;
   font-size:28px;
 }
 
