Update code and strong text colors in jekyll-theme-minimal.scss for improved aesthetics

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -77,7 +77,8 @@ blockquote {
 
 code, pre {
   font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
-  color:#333;
+  color:#f4f1eb;
+  ;
 }
 
 pre {
@@ -180,7 +181,8 @@ ul.downloads {
 }
 
 strong {
-  color:#222;
+  color: #f4f1eb;
+  // color: #222;
   font-weight:700;
 }
 
