Update link colors in jekyll-theme-minimal.scss for improved visibility

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -40,13 +40,13 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#4a90e2;
+  color:#4d96e9;
   // color:#267CB9;
   text-decoration:none;
 }
 
 a:hover, a:focus {
-  color:#166caa;
+  color:#175aa2;
   // color:#069;
   font-weight: bold;
 }
