Update background color in jekyll-theme-minimal.scss and correct Teaching Assistant role dates in another-page.md for accuracy

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,7 +2,8 @@
 @import "rouge-github";
 
 body {
-  background-color: #212020 ;
+  background-color: #161616;
+  // background-color: #212020 ;
   // background-color: #d2cab7;
   padding:20px;
   font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
