--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -13,7 +13,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#f4f1eb;
+  color:white;
   // color:black;
   margin:0 0 20px;
 }
@@ -23,21 +23,21 @@ p, ul, ol, table, pre, dl {
 }
 
 h1, h2, h3 {
-  color:#f4f1eb;
+  color:white;
   line-height:1.1;
 }
 
 h1 {
-  color:#f4f1eb;
+  color:white;
   font-size:28px;
 }
 
 h2 {
-  color:#f4f1eb;
+  color:white;
 }
 
 h3, h4, h5, h6 {
-  color:#f4f1eb;
+  color:white;
 }
 
 a {
@@ -54,14 +54,14 @@ a:hover, a:focus {
 
 a small {
   font-size:11px;
-  color:#f4f1eb;
+  color:white;
   // color:#777;
   margin-top:-0.3em;
   display:block;
 }
 
 a:hover small {
-  color:#f4f1eb;
+  color:white;
 }
 
 .wrapper {
@@ -78,7 +78,7 @@ blockquote {
 
 code, pre {
   font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, Consolas, Liberation Mono, DejaVu Sans Mono, Courier New, monospace;
-  color:#f4f1eb;
+  color:white;
   ;
 }
 
@@ -103,13 +103,13 @@ th, td {
 }
 
 dt {
-  color: #f4f1eb;
+  color: white;
   // color:#444;
   font-weight:700;
 }
 
 th {
-  color:#f4f1eb;
+  color:white;
 }
 
 img {
@@ -182,7 +182,7 @@ ul.downloads {
 }
 
 strong {
-  color: #f4f1eb;
+  color: white;
   // color: #222;
   font-weight:700;
 }
@@ -294,7 +294,7 @@ footer {
   body {
     padding:0.4in;
     font-size:12pt;
-    color: #f4f1eb;
+    color: white;
     // color:#444;
   }
 }
