--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -154,13 +154,13 @@ ul.downloads {
 }
 
 
-.downloads li:first-child a {
-  border-radius:5px 0 0 5px;
-}
+// .downloads li:first-child a {
+//   border-radius:5px 0 0 5px;
+// }
 
-.downloads li:last-child a {
-  border-radius:0 5px 5px 0;
-}
+// .downloads li:last-child a {
+//   border-radius:0 5px 5px 0;
+// }
 
 .downloads a {
   display: inline-block; /* Allow centering of text inside the button */
