Update hover text color for download links to enhance visibility

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -177,7 +177,7 @@ ul.downloads {
 
 .downloads a:hover {
   background-color: #eaeaea; /* Add hover effect */
-  color: #444; /* Slightly darker text on hover */
+  color: #175aa2; /* Slightly darker text on hover */
 }
 
 .downloads ul a:active {
