--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -176,7 +176,7 @@ ul.downloads {
 
 
 .downloads a:hover {
-  background-color: #eaeaea; /* Add hover effect */
+  background-color: #a7a4a4; /* Add hover effect */
   color: #4d96e9; /* Slightly darker text on hover */
 }
 
@@ -220,8 +220,9 @@ hr {
 footer {
   width:270px;
   float:left;
-  position:static;
-  bottom:50px;
+  position:fixed;
+  // bottom:50px;
+  bottom: 0;
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
