--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,7 @@
           <!-- <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li> -->
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
+        <p class="made-by">Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
       </header>
       <section>
@@ -50,9 +51,9 @@
 
       </section>
       <footer>
-        {% if site.github.is_project_page %}
+        <!-- {% if site.github.is_project_page %}
         <p>Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
+        {% endif %} -->
         <!-- <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p> -->
       </footer>
     </div>
