Enhance hover effect by increasing font weight for "GitHub" link in downloads section

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -181,7 +181,8 @@ ul.downloads {
 }
 
 .downloads a:hover strong {
-  color: #4d96e9; /* Change the color of the "GitHub" inside <strong> to blue */
+  color: #4d96e9;
+  font-weight: 900;
 }
 
 .downloads ul a:active {
