Update hover effect background color for download links

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -176,7 +176,7 @@ ul.downloads {
 
 
 .downloads a:hover {
-  background-color: #cfcfcf; /* Add hover effect */
+  background-color: #e1e0e0; /* Add hover effect */
   color: #4d96e9; /* Slightly darker text on hover */
 }
 
