Update hover effect background color and text color for download links

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -176,17 +176,17 @@ ul.downloads {
 
 
 .downloads a:hover {
-  background-color: #e1e0e0; /* Add hover effect */
+  background-color: #f0f0f0; /* Add hover effect */
   color: #4d96e9; /* Slightly darker text on hover */
 }
 
 .downloads a:hover strong {
-  color: #175aa2;
+  color: #0654ad;
   font-weight: 900;
 }
 
 .downloads ul a:active {
-  background-color:#f0f0f0;
+  background-color:#e1e0e0;
 }
 
 strong {
