Update text color and hover effect for download links

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -171,7 +171,7 @@ ul.downloads {
   border: 1px solid #e0e0e0; /* Subtle border */
   font-size: 14px; /* Adjust font size */
   font-weight: bold; /* Make text bold */
-  color: #676767; /* Text color */
+  color: #292828; /* Text color */
 }
 
 
@@ -181,12 +181,12 @@ ul.downloads {
 }
 
 .downloads a:hover strong {
-  color: #0654ad;
+  color: #005bc4;
   font-weight: 900;
 }
 
 .downloads ul a:active {
-  background-color:#e1e0e0;
+  background-color:#b8b6b6;
 }
 
 strong {
@@ -202,7 +202,7 @@ strong {
 .downloads a strong {
   font-size:14px;
   display:block;
-  color:#222;
+  color:#000000;
 }
 
 
