--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -41,13 +41,13 @@ h3, h4, h5, h6 {
 }
 
 a {
-  color:#4d96e9;
+  color:#59a2f7;
   // color:#267CB9;
   text-decoration:none;
 }
 
 a:hover, a:focus {
-  color:#175aa2;
+  color:#005bc4;
   // color:#069;
   font-weight: bold;
 }
@@ -177,7 +177,7 @@ ul.downloads {
 
 .downloads a:hover {
   background-color: #f0f0f0; /* Add hover effect */
-  color: #4d96e9; /* Slightly darker text on hover */
+  color: #59a2f7; /* Slightly darker text on hover */
 }
 
 .downloads a:hover strong {
