--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -166,7 +166,7 @@ ul.downloads {
   display: inline-block; /* Allow centering of text inside the button */
   text-align: center; /* Ensure text inside is centered */
   padding: 10px 20px; /* Adjust padding for size */
-  background: #f4f4f4; /* Button background color */
+  background: #c4c3c3; /* Button background color */
   border-radius: 5px; /* Apply consistent rounded corners */
   border: 1px solid #e0e0e0; /* Subtle border */
   font-size: 14px; /* Adjust font size */
@@ -176,7 +176,7 @@ ul.downloads {
 
 
 .downloads a:hover {
-  background-color: #f0f0f0; /* Add hover effect */
+  background-color: #ffffff; /* Add hover effect */
   color: #59a2f7; /* Slightly darker text on hover */
 }
 
@@ -186,7 +186,7 @@ ul.downloads {
 }
 
 .downloads ul a:active {
-  background-color:#b8b6b6;
+  background-color:#c4c3c3;
 }
 
 strong {
