Update link hover colors for improved visibility and consistency

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -47,7 +47,7 @@ a {
 }
 
 a:hover, a:focus {
-  color:#005bc4;
+  color:#003693;
   // color:#069;
   font-weight: bold;
 }
@@ -176,12 +176,12 @@ ul.downloads {
 
 
 .downloads a:hover {
-  background-color: #b0cde6; /* Add hover effect */
+  background-color: #bfd9f0; /* Add hover effect */
   color: #59a2f7; /* Slightly darker text on hover */
 }
 
 .downloads a:hover strong {
-  color: #59a2f7;
+  color: #003693;
   font-weight: 900;
 }
 
