Update hover background color for download links for improved visibility

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -176,7 +176,7 @@ ul.downloads {
 
 
 .downloads a:hover {
-  background-color: #bfd9f0; /* Add hover effect */
+  background-color: #d8e9f8; /* Add hover effect */
   color: #59a2f7; /* Slightly darker text on hover */
 }
 
