--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -7,7 +7,7 @@ body {
   // background-color: #d2cab7;
   padding:20px;
   font: 15px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#e6e0d3;
+  color:white;
   // color:black;
   font-weight:500;
 }
