--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -13,7 +13,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:white;
+  color:beige;
   // color:black;
   margin:0 0 20px;
 }
@@ -157,7 +157,7 @@ ul.downloads {
   display: inline-block; /* Allow centering of text inside the button */
   text-align: center; /* Ensure text inside is centered */
   padding: 10px 15px; /* Adjust padding for size */
-  background: whitesmoke; /* Button background color */
+  background: beige; /* Button background color */
   border-radius: 5px; /* Apply consistent rounded corners */
   border: 1px solid #d2d2d2; /* Subtle border */
   font-size: 15px; /* Adjust font size */
