--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -149,7 +149,7 @@ ul.downloads {
   display: inline-block; /* Allow centering of text inside the button */
   text-align: center; /* Ensure text inside is centered */
   padding: 10px 15px; /* Adjust padding for size */
-  background: beige; /* Button background color */
+  background: rgb(223, 222, 222); /* Button background color */
   border-radius: 5px; /* Apply consistent rounded corners */
   border: 1px solid #d2d2d2; /* Subtle border */
   font-size: 15px; /* Adjust font size */
