--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -98,6 +98,7 @@ th, td {
   text-align:left;
   padding:5px 10px;
   // border-bottom:1px solid #333333;
+  border-top: 1px solid lightgray;
   border-bottom:1px solid lightgray;
 }
 
