Adjust font weights for improved text hierarchy and increase maximum image width for better layout adaptability

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -101,16 +101,16 @@ th, td {
 
 dt {
   color: white;
-  // color:#444;
   font-weight:700;
 }
 
 th {
   color:white;
+  font-weight: normal;
 }
 
 img {
-  max-width:70%;
+  max-width:80%;
 }
 
 kbd {
