--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -147,6 +147,12 @@ kbd {
   vertical-align: middle;
 }
 
+hr {
+  border:0;
+  background:#dddd;
+  height:1px;
+  margin:0 0 20px;
+}
 
 ul.downloads {
   list-style: none; /* Remove bullet points */
@@ -211,14 +217,6 @@ ul.downloads {
   margin-top: 5px; /* Optional: Adjust spacing as needed */
   font-size: 14px; /* Optional: Adjust the font size */
   color: #f0f0f0; /* Optional: Add a subtle color */
-}
-
-
-hr {
-  border:0;
-  background:#e5e5e5;
-  height:1px;
-  margin:0 0 20px;
 }
 
 // footer {
