--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -16,16 +16,21 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Specific styles for headings */
 h1 {
-  font-size: 30px;
+  font-size: 35px;
   line-height: 1.1;
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 30px;
   line-height: 1.1;
 }
 
 h3 {
+  font-size: 25px;
+  line-height: 1.1;
+}
+
+h4 {
   font-size: 20px;
   line-height: 1.1;
 }
@@ -49,7 +54,6 @@ header {
   position:fixed;
   -webkit-font-smoothing:subpixel-antialiased;
 }
-
 
 section {
   width:550px;
