--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -74,6 +74,7 @@ p, ul, ol, table, pre, dl {
 a {
   color:#59a2f7;
   text-decoration:none;
+  font-weight: bold;
 }
 
 a:hover, a:focus {
@@ -81,16 +82,6 @@ a:hover, a:focus {
   font-weight: bold;
 }
 
-a small {
-  font-size:11px;
-  color:white;
-  margin-top:-0.3em;
-  display:block;
-}
-
-a:hover small {
-  color:white;
-}
 
 
 blockquote {
