Update personal description in config and comment out line-height for h1 styling

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Specific styles for headings */
 h1 {
   font-size: 40px;
-  line-height: 1.1;
+  // line-height: 1.1;
 }
 
 h2 {
