--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Specific styles for headings */
 h1 {
   font-size: 40px;
-  text-align: center;
+  // text-align: center;
   // line-height: 1.1;
 }
 
@@ -76,7 +76,7 @@ p, ul, ol, table, pre, dl {
 a {
   color:#59a2f7;
   text-decoration:none;
-  font-weight: bold;
+  // font-weight: bold;
 }
 
 a:hover, a:focus {
