Adjust header padding and modify wrapper width from 1000px to 950px for layout refinement

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -52,6 +52,7 @@ strong {
 
 
 header {
+  padding-top: 10px;
   width:300px;
   float:left;
   position:fixed;
@@ -66,7 +67,7 @@ section {
 }
 
 .wrapper {
-  width:1000px;
+  width:950px;
   margin:0 auto;
 }
 
