Enhance GitHub link styling and adjust h4 line-height for improved readability

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,16 +41,12 @@
         <ul class="downloads">
           <!-- <li><a href="{{ site.github.repository_url }}">View on <strong>GitHub</strong></a></li> -->
           <li>
-            <a href="{{ site.github.repository_url }}" class="icon brands fa-github">
-              <i class="fab fa-github"></i> <!-- Font Awesome GitHub Icon -->
+            <a href="{{ site.github.repository_url }}" class="icon">
               <span>View on <strong>GitHub</strong></span>
+              <i class="fab fa-github"></i>
             </a>
           </li>
-          <!-- <li>
-            <a href="https://github.com/kdpham-01002?tab=repositories" class="icon brands fa-github">
-              <span class="label">GitHub</span>
-            </a>
-          </li> -->
+
         </ul>
         <p class="made-by">Made by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
